--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-egui= "0.21.0"
 eframe="0.21.3"
+frontend_lib = { path = "../frontend_lib" }
