--- a/slint_lib/Cargo.toml
+++ b/slint_lib/Cargo.toml
@@ -1,15 +1,14 @@
 [package]
-name = "frontend"
+name = "slint_lib"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eframe="0.21.3"
 slint = "1.0.0"
-frontend_lib = { path = "../frontend_lib" }
-slint_lib = { path = "../slint_lib" }
 
 [build-dependencies]
 slint-build = "1.0.0"
