--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,8 @@ members = [
     "database_bin",
     "frontend",
     "frontend_lib",
+    "ui_iced",
+    "ui_iced_lib",
+#    "ui_slint",
+#    "ui_slint_lib",
 ]
