--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,6 @@ members = [
     "database_bin",
     "frontend",
     "frontend_lib",
+    "slint",
     "slint_lib",
-    "ui_iced",
-    "ui_iced_lib",
-#    "ui_slint",
-#    "ui_slint_lib",
 ]
