--- a/slint_lib/Cargo.toml
+++ b/slint_lib/Cargo.toml
@@ -12,3 +12,7 @@ slint = "1.0.0"
 
 [build-dependencies]
 slint-build = { version = "1.0.0" }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = { version = "0.2.84" }
+console_error_panic_hook = "0.1.6"
