--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -10,3 +10,6 @@ dotenv = "0.15.0"
 sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
 tokio = { version = "1.26.0", features = ["macros"] }
 uuid = { version = "1.3.0", features = ["serde", "v4"] }
+
+[dev-dependencies]
+rand = "0.8.1"
