--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Install dependencies and set up database
       run: |
         sudo apt-get update
-        sudo apt-get install -y libgtk-3-dev libgtk-4-dev libpq-dev
+        sudo apt-get install -y libgtk-3-dev libgtk-4-dev libpq-dev protobuf-compiler
         cargo install sqlx-cli
 
     - name: Run Rustfmt
