--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1.67"
 axum = "0.6.12"
+axum-auth = "0.4.0"
 axum-macros = "0.3.7"
 axum-tracing-opentelemetry = "0.10.0"
-backoff = "0.4.0"
 base64 = "0.21.0"
 database = { path = "../database" }
 dotenvy = "0.15.7"
@@ -20,8 +20,8 @@ hyper = { version = "0.14.25", features = ["client"] }
 hmac = "0.12.1"
 http-body = "0.4.5"
 lazy_static = "1.4.0"
-opentelemetry = "0.18.0"
-opentelemetry-otlp = "0.11.0"
+opentelemetry = "0.19.0"
+opentelemetry-otlp = "0.12.0"
 partial_application = "0.2.1"
 rand = "0.8.5"
 serde = "1.0.158"
@@ -34,12 +34,9 @@ time = { version = "0.3.20", features = ["serde"] }
 tokio = { version = "1.26.0", features = ["macros"] }
 tower = "0.4.13"
 tracing = "0.1.37"
-tracing-opentelemetry = "0.18.0"
+tracing-opentelemetry = "0.19.0"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 uuid = { version = "1.3.0", features = ["serde", "v4"] }
-
-[dev-dependencies]
-async-recursion = "1.0.4"
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
