--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+email_address = "0.2.4"
 async-trait = "0.1.67"
 axum = "0.6.12"
 axum-auth = "0.4.0"
