--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -37,11 +37,22 @@ jobs:
           - name: Test postgres connection
             run: psql postgres://postgres:postgres@localhost:5432/postgres -c 'SELECT 1;'
 
-          - name: Cargo test
-            uses: actions-rs/cargo@v1
-            with:
-              command: test
-              args: --verbose
+          - name: Install dependencies and set up database
+            run: |
+              cargo install sqlx-cli
+
+          - name: Run migrations
             env:
-              POSTGRES_USER: postgres
-              POSTGRES_PASSWORD: postgres
+              DATABASE_URL: postgres://postgres:postgres@127.0.0.1/postgres
+            working-directory: ./backend
+            run: sqlx migrate run
+            
+          - name: Build project
+            working-directory: ./backend
+            run: cargo build
+            
+          - name: Run cargo tests
+            env:
+              DATABASE_URL: postgres://postgres:postgres@127.0.0.1/postgres
+            working-directory: ./backend
+            run: cargo test
