--- a/.github/workflows/build_upload_image.yml
+++ b/.github/workflows/build_upload_image.yml
@@ -1,13 +1,14 @@
 name: Build and upload docker image
+
 on:
   workflow_dispatch:
     inputs:
       logLevel:
-        description: 'Log level'     
+        description: 'Log level'
         required: true
         default: 'warning'
       tags:
-        description: 'Build and upload docker image' 
+        description: 'Build and upload docker image'
 
 jobs:
   build_and_push:
@@ -29,15 +30,20 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-#     - name: Get latest tag
-#       id: latest_tag
-#       run: echo ::set-output name=latest_tag::$(git describe --tags --abbrev=0)
-
-    - name: Build and push Docker image
+    - name: Build and push Backend Docker image
       uses: docker/build-push-action@v2
       with:
         context: .
+        file: ./backend_dockerfile
         push: true
         tags: |
-          sturivnyi/rust-wasm:latest
-#          sturivnyi/rust-wasm:${{ steps.latest_tag.outputs.latest_tag }}
+          sturivnyi/backend-exchange:latest
+
+    - name: Build and push Frontend Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./frontend_dockerfile
+        push: true
+        tags: |
+          sturivnyi/frontend-exchange:latest
